<resources>
    <string name="app_name">Archer NoteBook</string>
    <string name="none">none</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_activity_main">Notebook</string>
    <string name="archery_notebook">Archery Notebook</string>
    <string name="slide_one_down_text">Amazing Android app with cool\nfeatures.</string>
    <string name="slide_one_top_text">Welcome to Archer Notebook</string>
    <string name="slide_two_down_text">Save the scores sheets you\nmake at training and tournament\nin on place.</string>
    <string name="slide_two_top_text">All scores in\none place</string>
    <string name="slide_three_down_text">Mark you bow adjustments\nfor specifics targets.</string>
    <string name="slide_three_top_text">Bow adjustments</string>
    <string name="slide_four_down_text">Tap Done and start using\nArcher Notebook.</string>
    <string name="slide_four_top_text">What are\nyou waiting?</string>

    <!-- the test aDmob values -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_id_ad_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="more">More</string>
    <string name="welcome_to_notebook">Welcome to Notebook</string>
    <string name="adjust">Adjust</string>
    <string name="scores">Scores</string>
    <string name="bow_setting">Bow Setting</string>
    <string name="menu_item_setting_string">Setting</string>
    <string name="title_activity_adjustments">Adjustments</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_bow_setting">Bow Setting</string>
    <string name="more_toast">More features in next version of the app.</string>
    <string name="adjustment_empty_detail_string">Get started by adding an adjustment.</string>
    <string name="adjustment_empty_title_string">No adjustment available.</string>
    <string name="horizontal_adjust">Horizontal Adjust</string>
    <string name="vertical_adjust">Vertical Adjust</string>
    <string name="description">Description</string>
    <string name="info_add_photo_string">You can take any photos for your bow and other thing like clicker state, arrows and so on.</string>
    <string name="no_photos_yet">No Photos yet.</string>
    <string name="take_photo">Take Photo</string>
    <string name="somthing_wrong">Something Wrong happened.</string>
    <string name="photo_string">Photos.</string>
    <string name="title_activity_adjustment_detail">Detail Adjustment</string>
    <string name="vertical_adjustments">Vertical\nAdjustments</string>
    <string name="horizontal_adjustments">Horizontal\nAdjustments</string>
    <string name="no_photos">No Photos</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="nan">NaN</string>
    <string name="no_description">No Description.</string>
    <string name="delete_all">Delete All</string>
    <string name="finish">Finish</string>
    <string name="add_adjuts_photo_title">Photo Adjusts.</string>
    <string name="add_adjust_photo_message">Please take photos for your bow.</string>
    <string name="title_activity_add_adjustment">Add Adjustment</string>
    <string name="done_add_adjustment_menu_string">Done</string>
    <string name="_18_meters">18 meters</string>
    <string name="_30_meters">30 meters</string>
    <string name="_50_meters">50 meters</string>
    <string name="_60_meters">60 meters</string>
    <string name="_70_meters">70 meters</string>
    <string name="_90_meters">90 meters</string>
    <string name="adjustments">Adjustments</string>
    <string name="delete">Delete</string>
    <string name="title_activity_add_score_sheet">Add Score Sheet</string>
    <string name="start_shooting">Start Shooting</string>
    <string name="type_of_sheet">Type of Sheet</string>
    <string name="tournament">Tournament</string>
    <string name="training">Training</string>
    <string name="one_series">One Series</string>
    <string name="two_series">Two Series</string>
    <string name="type_of_series">Type of Series</string>
    <string name="title_activity_score_sheet">Score Sheet</string>
    <string name="marks">Marks</string>
    <string name="tap_bellow">Tap bellow</string>
    <string name="round">Round</string>
    <string name="save_score_string">Save Score</string>
    <string name="continue_shooting_string">Continue Shooting</string>
    <string name="first_serie">First Series</string>
    <string name="second_serie">Second Series</string>
    <string name="add_score">Add Score</string>
    <string name="progress">Progress</string>
    <string name="title_activity_previous_scores">Previous Scores</string>
    <string name="previous_scores_empty_title_string">No Scores recorded yet.</string>
    <string name="previous_scores_empty_detail_string">Get started by adding new Scores.</string>
    <string name="title_activity_score_detail">Score Detail</string>
    <string name="edit_string">Edit</string>
</resources>
