<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddScoreSheetActivity"
    tools:showIn="@layout/activity_add_score_sheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/distance"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/add_score_sheet_distance_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">


            <RadioButton
                android:id="@+id/add_adjust_90_meter_radio"
                style="@style/RadioButtonAddAdjust"

                android:text="@string/_90_meters" />

            <RadioButton
                android:id="@+id/add_adjust_70_meter_radio"
                style="@style/RadioButtonAddAdjust"
                android:checked="true"
                android:text="@string/_70_meters" />

            <RadioButton
                android:id="@+id/add_adjust_60_meter_radio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_60_meters" />


            <RadioButton
                android:id="@+id/add_adjust_50_meter_radio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_50_meters" />

            <RadioButton
                android:id="@+id/add_adjust_30_meter_radio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_30_meters" />

            <RadioButton
                android:id="@+id/add_adjust_18_meter_radio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_18_meters" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/type_of_sheet"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/add_score_sheet_sheet_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:id="@+id/add_score_sheet_tournament_radio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/tournament" />

            <RadioButton
                android:id="@+id/add_score_sheet_training_radio"
                style="@style/RadioButtonAddAdjust"
                android:checked="true"
                android:text="@string/training" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/type_of_series"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/add_score_sheet_series_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/add_score_sheet_one_series_radio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/one_series" />

            <RadioButton
                android:id="@+id/add_score_sheet_two_series_radio"
                style="@style/RadioButtonAddAdjust"
                android:checked="true"
                android:text="@string/two_series" />
        </RadioGroup>


        <Button
            android:id="@+id/add_score_sheet_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bahnschrift"
            android:padding="16dp"
            android:text="@string/start_shooting"
            android:textSize="22sp"
            android:theme="@style/ButtonStyleStartShooting" />


    </LinearLayout>
</ScrollView>
