<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddAdjustmentActivity"
    tools:showIn="@layout/activity_add_adjustment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/adjustments"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/horizontalAdjustInputLayoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/horizontalAdjustInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bahnschrift"
                android:hint="@string/horizontal_adjust"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verticalAdjustInputLayoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/verticalAdjustInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fontFamily="@font/bahnschrift"
                android:hint="@string/vertical_adjust"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriptionAdjustInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bahnschrift"
                android:hint="@string/description"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/distance"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/addAdjutsmentDistancesRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:id="@+id/addAdjust90MeterRadio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_90_meters" />

            <RadioButton
                android:id="@+id/addAdjust70MeterRadio"
                style="@style/RadioButtonAddAdjust"
                android:checked="true"
                android:text="@string/_70_meters" />

            <RadioButton
                android:id="@+id/addAdjust60MeterRadio"
                style="@style/RadioButtonAddAdjust"
                android:checked="true"
                android:text="@string/_60_meters" />

            <RadioButton
                android:id="@+id/addAdjust50MeterRadio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_50_meters" />

            <RadioButton
                android:id="@+id/addAdjust30MeterRadio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_30_meters" />

            <RadioButton
                android:id="@+id/addAdjust18MeterRadio"
                style="@style/RadioButtonAddAdjust"
                android:text="@string/_18_meters" />


        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/photo_string"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/info_add_photo_string" />

        <Button
            android:id="@+id/adjustButtonAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/take_photo"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="34sp" />


        <TextView
            android:id="@+id/adjustPhotoStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/no_photos_yet" />

    </LinearLayout>

</ScrollView>
