<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <Button
        android:id="@+id/adjust_button_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@null"
        android:fontFamily="@font/bahnschrift"
        android:textColor="@color/colorAccent"
        android:textSize="34sp"
        android:text="@string/take_photo" />


    <TextView
        android:id="@+id/adjust_photo_state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/no_photos_yet" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/info_add_photo_string" />
</LinearLayout>