<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AdjustmentDetailActivity"
    tools:showIn="@layout/activity_adjustment_detail">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_view_detail_adjustment">

        <LinearLayout
            android:id="@+id/detail_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/distance"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_adjust_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/bahnschrift"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="70 meters." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/date"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_adjust_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/bahnschrift"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="Wed 20 aout." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/description"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_adjust_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/bahnschrift"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="No Description." />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/bahnschrift"
                        android:text="@string/vertical_adjustments"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_adjust_vertical_adjs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        tools:text="6.2" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/bahnschrift"
                        android:text="@string/horizontal_adjustments"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_adjust_horizontal_adjs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        tools:text="NaN" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/photo_string"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detail_adjust_no_photo"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/no_photos"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view_detail_adjustment"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="8dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />


</RelativeLayout>