<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/welcome_to_notebook"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/adjust_card_view"
        style="@style/CardViewMain"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/adjust"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_gear_archer" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/score_card_view"
        style="@style/CardViewMain"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/scores"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@null"
                android:src="@drawable/taget_and_arrow" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/bow_setting_card_view"
        style="@style/CardViewMain"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adjust_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/bow_setting"

                android:textSize="18sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@null"
                android:src="@drawable/bow_classic_brown" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/more_card_view"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/more"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_more" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>