<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnschrift"
        tools:text="Text Adjusts"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnschrift"
        android:text="Please fill the information in the text fields." />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/horizontal_adjust_input_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/horizontal_adjust_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/horizontal_adjust"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/vertical_adjust_input_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/vertical_adjust_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fontFamily="@font/bahnschrift"
            android:hint="@string/vertical_adjust"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description_adjust_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/description"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/bahnschrift"
            android:textColor="@color/colorAccent"
            tools:text="Next" />
    </LinearLayout>

</LinearLayout>